G2-1269 Allow illegal reflective access